java8 support with JABEL