@@ -20,6 +20,7 @@ import java.util.Map;
 import java.util.Set;
 import java.util.function.Function;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 public class MCPVersions {
     private static final String FORGE_MAVEN = "https://maven.minecraftforge.net/";
@@ -52,7 +53,7 @@ public class MCPVersions {
         versions.addAll(findMcp());
         versions.addAll(findMcpConfig());
         //TODO: Other discovery?
-        knownVersions = versions.stream().sorted().toList();
+        knownVersions = versions.stream().sorted().collect(Collectors.toList());
         return knownVersions;
     }
 
